# dto/auth.dto.go
@@ -11,6 +11,10 @@ type LoginRequest struct {
 	Password string `json:"password" binding:"required,min=6"`
 }
 
+type VerifyEmail struct {
+	Email    string `json:"email" binding:"required,email"`
+}
+
 type ForgotPasswordRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	VerificationCode string `json:"code" binding:"required"`
