# routers/auth.router.go
@@ -8,6 +8,6 @@ import (
 func authRouters(r *gin.RouterGroup){
 	r.POST("/register", controllers.RegisterUser)
 	r.POST("/login", controllers.LoginUser )
-	r.GET("/forgot-password", controllers.ForgotPassword)
-	r.POST("/reset-password", controllers.ForgotPassword)
+	r.POST("/forgot-password", controllers.ForgotPassword)
+	r.POST("/reset-password", controllers.ResetPassword)
 } 
